# formate-js

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  Cargo.toml  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
formate_js/: __init__.py
python/formate_js/: __init__.py  __init__.pyi  _formate_js.pyi  enums.py
src/: configuration.rs  configuration_builder.rs  format_text.rs  lib.rs
tests/: requirements.txt  test_enums.py  test_formatting.py  test_global_config.py
tests/specs/: README.md
tests/specs/literals/StringLiteral/: StringLiteral_QuoteProps_AsNeeded.txt
