[build-system]
requires = [ "maturin<2.0,>=1.10",]
build-backend = "maturin"

[project]
name = "formate-js"
version = "0.0.0"
description = "Formate plugin for reformatting JavaScript and TypeScript files with dprint."
readme = "README.rst"
requires-python = ">=3.8"
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]
dependencies = []
dynamic = []

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/python-formate/formate-js"
"Issue Tracker" = "https://github.com/python-formate/formate-js/issues"
"Source Code" = "https://github.com/python-formate/formate-js"

[tool.whey]
base-classifiers = [ "Programming Language :: Rust",]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "formate_js"

[tool.importcheck]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.maturin]
python-source = "python"
module-name = "formate_js._formate_js"
